--- a/.github/workflows/kernel.yml
+++ b/.github/workflows/kernel.yml
@@ -88,14 +88,19 @@ jobs:
       - name: ⭐ Install prerequisites
         run: |
           sudo apt-get update
-          sudo apt-get install -y curl git ftp lftp wget libarchive-tools ccache python3 python3-dev python3-distutils python3-pip python-is-python3
+          sudo apt-get install -y curl git ftp lftp wget libarchive-tools ccache
           sudo apt-get install -y pngcrush schedtool dpkg-dev liblz4-tool make optipng maven device-tree-compiler 
           sudo apt-get install -y libc6-dev-i386 lib32ncurses5-dev libx11-dev lib32z-dev libgl1-mesa-dev xsltproc
           sudo apt-get install -y libxml2-utils libbz2-dev libbz2-1.0 libghc-bzlib-dev squashfs-tools lzop flex tree
           sudo apt-get install -y build-essential bc gcc-aarch64-linux-gnu gcc-arm-linux-gnueabi libssl-dev libfl-dev
           sudo apt-get install -y pwgen libswitch-perl policycoreutils minicom libxml-sax-base-perl libxml-simple-perl 
           sudo apt-get install -y zip unzip tar gzip bzip2 rar unrar llvm g++-multilib bison gperf zlib1g-dev automake
-
+      - name: Install Python 3 and common tools
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y python3 python3-dev python3-pip python3-venv python-is-python3
+          # optional: ensure pip/setuptools up-to-date
+          python -m pip install --upgrade pip setuptools wheel
       # Initialize ccache
       - name: 🚄 Setup ccache
         if: ${{ env.ENABLE_CCACHE == 'true' }}
