--- a/.github/workflows/kernel.yml
+++ b/.github/workflows/kernel.yml
@@ -85,21 +85,32 @@ jobs:
         uses: actions/checkout@v4
 
       # Install prerequisites for Ubuntu
-      - name: ⭐ Install prerequisites
+      - name: ⭐ Install prerequisites (with i386 support)
         run: |
           sudo apt-get update
+          sudo apt-get install -y software-properties-common
+          sudo add-apt-repository -y universe || true
+          sudo dpkg --add-architecture i386
+          sudo apt-get update
+      
+          # base tools
           sudo apt-get install -y curl git ftp lftp wget libarchive-tools ccache
-          sudo apt-get install -y pngcrush schedtool dpkg-dev liblz4-tool make optipng maven device-tree-compiler 
-          sudo apt-get install -y libc6-dev-i386 lib32ncurses5-dev libx11-dev lib32z-dev libgl1-mesa-dev xsltproc
-          sudo apt-get install -y libxml2-utils libbz2-dev libbz2-1.0 libghc-bzlib-dev squashfs-tools lzop flex tree
+      
+          # image/tools/misc
+          sudo apt-get install -y pngcrush schedtool dpkg-dev liblz4-tool make optipng maven device-tree-compiler
+      
+          # 32-bit libs (install i386 variants)
+          sudo apt-get install -y libc6-dev-i386 libncurses5-dev:i386 libncursesw5-dev:i386 libx11-dev libz-dev:i386 libgl1-mesa-dev xsltproc || \
+            sudo apt-get install -y libc6-dev-i386 libncurses-dev libx11-dev lib32z-dev libgl1-mesa-dev xsltproc
+      
+          # other deps
+          sudo apt-get install -y libxml2-utils libbz2-dev libghc-bzlib-dev squashfs-tools lzop flex tree
           sudo apt-get install -y build-essential bc gcc-aarch64-linux-gnu gcc-arm-linux-gnueabi libssl-dev libfl-dev
-          sudo apt-get install -y pwgen libswitch-perl policycoreutils minicom libxml-sax-base-perl libxml-simple-perl 
+          sudo apt-get install -y pwgen libswitch-perl policycoreutils minicom libxml-sax-base-perl libxml-simple-perl
           sudo apt-get install -y zip unzip tar gzip bzip2 rar unrar llvm g++-multilib bison gperf zlib1g-dev automake
-      - name: Install Python 3 and common tools
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y python3 python3-dev python3-pip python3-venv python-is-python3
-          # optional: ensure pip/setuptools up-to-date
+      
+          # ensure pip/setuptools available if needed
+          sudo apt-get install -y python3 python3-pip python-is-python3
           python -m pip install --upgrade pip setuptools wheel
       # Initialize ccache
       - name: 🚄 Setup ccache
