--- a/.github/workflows/kernel.yml
+++ b/.github/workflows/kernel.yml
@@ -21,7 +21,10 @@ jobs:
       # This action checks-out your CONFIGSitory under $GITHUB_WORKSPACE, so your workflow can access it.
       - name: 😄 Checkout
         uses: actions/checkout@v4
-
+      - name: 🧰 Install jq (needed for Generate Matrix)
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y jq
       # Match the configuration files in the CONFIGS directory, read the contents and merge them into an array.
       - name: 😆 Generate Matrix
         id: generate-matrix
