--- a/.github/workflows/kernel.yml
+++ b/.github/workflows/kernel.yml
@@ -23,8 +23,8 @@ jobs:
         uses: actions/checkout@v4
       - name: 🧰 Install jq (needed for Generate Matrix)
         run: |
-          sudo apt-get update
-          sudo apt-get install -y jq
+          apt-get update
+          apt-get install -y jq
       # Match the configuration files in the CONFIGS directory, read the contents and merge them into an array.
       - name: 😆 Generate Matrix
         id: generate-matrix
