--- a/.github/workflows/kernel.yml
+++ b/.github/workflows/kernel.yml
@@ -109,8 +109,22 @@ jobs:
           sudo apt-get install -y zip unzip tar gzip bzip2 rar unrar llvm g++-multilib bison gperf zlib1g-dev automake
       
           # ensure pip/setuptools available if needed
-          sudo apt-get install -y python2 python2-dev python3 python3-pip python-is-python3
-          python -m pip install --upgrade pip setuptools wheel
+          #sudo apt-get install -y python2 python2-dev python3 python3-pip python-is-python3
+          #python -m pip install --upgrade pip setuptools wheel
+      - name: Install python2.7 and pip2 (deadsnakes)
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y software-properties-common ca-certificates
+          sudo add-apt-repository -y ppa:deadsnakes/ppa
+          sudo apt-get update
+          sudo apt-get install -y python2.7 python2.7-dev
+          sudo ln -sf /usr/bin/python2.7 /usr/bin/python2
+      
+          # install pip for python2
+          curl -sS https://bootstrap.pypa.io/pip/2.7/get-pip.py -o /tmp/get-pip.py
+          sudo python2 /tmp/get-pip.py
+          python2 --version
+          pip2 --version
       # Initialize ccache
       - name: 🚄 Setup ccache
         if: ${{ env.ENABLE_CCACHE == 'true' }}
