--- a/.github/workflows/kernel.yml
+++ b/.github/workflows/kernel.yml
@@ -111,18 +111,26 @@ jobs:
           # ensure pip/setuptools available if needed
           #sudo apt-get install -y python2 python2-dev python3 python3-pip python-is-python3
           #python -m pip install --upgrade pip setuptools wheel
-      - name: Install python2.7 and pip2 (deadsnakes)
+      - name: Build and install Python2.7 from source
         run: |
           sudo apt-get update
-          sudo apt-get install -y software-properties-common ca-certificates
-          sudo add-apt-repository -y ppa:deadsnakes/ppa
-          sudo apt-get update
-          sudo apt-get install -y python2.7 python2.7-dev
-          sudo ln -sf /usr/bin/python2.7 /usr/bin/python2
+          sudo apt-get install -y build-essential wget curl libssl-dev zlib1g-dev \
+            libbz2-dev libreadline-dev libsqlite3-dev libncurses5-dev libncursesw5-dev \
+            libffi-dev liblzma-dev tk-dev
       
-          # install pip for python2
+          PYVER=2.7.18
+          cd /tmp
+          wget https://www.python.org/ftp/python/${PYVER}/Python-${PYVER}.tgz
+          tar xzf Python-${PYVER}.tgz
+          cd Python-${PYVER}
+          ./configure --prefix=/usr/local --enable-shared --with-ensurepip=install
+          make -j$(nproc)
+          sudo make altinstall   # installs as python2.7, not overwriting system python
+          sudo ln -sf /usr/local/bin/python2.7 /usr/bin/python2
+      
+          # install pip for python2 (bootstrap)
           curl -sS https://bootstrap.pypa.io/pip/2.7/get-pip.py -o /tmp/get-pip.py
-          sudo python2 /tmp/get-pip.py
+          sudo /usr/local/bin/python2.7 /tmp/get-pip.py
           python2 --version
           pip2 --version
       # Initialize ccache
