--- a/.github/workflows/kernel.yml
+++ b/.github/workflows/kernel.yml
@@ -113,24 +113,18 @@ jobs:
           #python -m pip install --upgrade pip setuptools wheel
       - name: Build and install Python2.7 from source
         run: |
-          sudo apt-get update
-          sudo apt-get install -y build-essential wget curl libssl-dev zlib1g-dev \
-            libbz2-dev libreadline-dev libsqlite3-dev libncurses5-dev libncursesw5-dev \
-            libffi-dev liblzma-dev tk-dev
-      
-          PYVER=2.7.18
-          cd /tmp
-          wget https://www.python.org/ftp/python/${PYVER}/Python-${PYVER}.tgz
-          tar xzf Python-${PYVER}.tgz
-          cd Python-${PYVER}
-          ./configure --prefix=/usr/local --enable-shared --with-ensurepip=install
-          make -j$(nproc)
-          sudo make altinstall   # installs as python2.7, not overwriting system python
-          sudo ln -sf /usr/local/bin/python2.7 /usr/bin/python2
-      
-          # install pip for python2 (bootstrap)
-          curl -sS https://bootstrap.pypa.io/pip/2.7/get-pip.py -o /tmp/get-pip.py
-          sudo /usr/local/bin/python2.7 /tmp/get-pip.py
+          sudo apt update && sudo apt upgrade
+          sudo apt install -y build-essential checkinstall libncurses-dev libssl-dev libsqlite3-dev tk-dev libgdbm-dev libc6-dev libbz2-dev libffi-dev
+          cd /usr/src
+          wget https://www.python.org/ftp/python/2.7.18/Python-2.7.18.tgz
+          tar xzf Python-2.7.18.tgz
+          cd Python-2.7.18
+          ./configure --prefix=/usr/local/python2.7
+          make
+          sudo make install
+          sudo apt install curl
+          curl https://bootstrap.pypa.io/pip/2.7/get-pip.py -o get-pip.py
+          sudo python2.7 get-pip.py
           python2 --version
           pip2 --version
       # Initialize ccache
