--- a/.github/workflows/kernel.yml
+++ b/.github/workflows/kernel.yml
@@ -115,7 +115,7 @@ jobs:
         run: |
           sudo apt update && sudo apt upgrade
           sudo apt install -y build-essential checkinstall libncurses-dev libssl-dev libsqlite3-dev tk-dev libgdbm-dev libc6-dev libbz2-dev libffi-dev
-          cd /usr/src
+          cd /tmp
           wget https://www.python.org/ftp/python/2.7.18/Python-2.7.18.tgz
           tar xzf Python-2.7.18.tgz
           cd Python-2.7.18
