--- a/.github/workflows/kernel.yml
+++ b/.github/workflows/kernel.yml
@@ -113,18 +113,43 @@ jobs:
           #python -m pip install --upgrade pip setuptools wheel
       - name: Build and install Python2.7 from source
         run: |
-          sudo apt update && sudo apt upgrade
-          sudo apt install -y build-essential checkinstall libncurses-dev libssl-dev libsqlite3-dev tk-dev libgdbm-dev libc6-dev libbz2-dev libffi-dev
-          cd /tmp
-          wget https://www.python.org/ftp/python/2.7.18/Python-2.7.18.tgz
-          tar xzf Python-2.7.18.tgz
-          cd Python-2.7.18
-          ./configure --prefix=/usr/local/python2.7
-          make
-          sudo make install
-          sudo apt install curl
-          curl https://bootstrap.pypa.io/pip/2.7/get-pip.py -o get-pip.py
-          sudo python2.7 get-pip.py
+          set -euo pipefail
+      
+          # 安装编译依赖
+          sudo apt-get update
+          sudo apt-get install -y build-essential wget curl \
+            zlib1g-dev libssl-dev libbz2-dev libreadline-dev libsqlite3-dev \
+            libncurses5-dev libncursesw5-dev libgdbm-dev libffi-dev liblzma-dev tk-dev
+      
+          # 下载到 /tmp 避免权限问题
+          PYVER=2.7.18
+          TMPDIR=/tmp/python2build
+          mkdir -p "$TMPDIR"
+          wget -q -O "$TMPDIR/Python-${PYVER}.tgz" "https://www.python.org/ftp/python/${PYVER}/Python-${PYVER}.tgz"
+      
+          # 解压并编译，启用共享库
+          tar xzf "$TMPDIR/Python-${PYVER}.tgz" -C "$TMPDIR"
+          cd "$TMPDIR/Python-${PYVER}"
+          ./configure --prefix=/usr/local --enable-shared --with-ensurepip=install
+          make -j$(nproc)
+          sudo make altinstall
+      
+          # 确保动态链接器能找到 libpython2.7
+          echo "/usr/local/lib" | sudo tee /etc/ld.so.conf.d/python2.conf
+          sudo ldconfig
+      
+          # 创建兼容性软链（可选，但常用）
+          sudo ln -sf /usr/local/bin/python2.7 /usr/bin/python2
+          sudo ln -sf /usr/local/bin/pip2 /usr/bin/pip2 || true
+      
+          # 安装 pip2（如果 ensurepip 未安装或需要更新）
+          if ! command -v pip2 >/dev/null 2>&1; then
+            curl -sS https://bootstrap.pypa.io/pip/2.7/get-pip.py -o /tmp/get-pip.py
+            sudo /usr/local/bin/python2.7 /tmp/get-pip.py
+          fi
+      
+          # 验证
+          /usr/local/bin/python2.7 --version
           python2 --version
           pip2 --version
       # Initialize ccache
